test/valid/fc36956_ArrayList/Node.plume

abstract class Node extends Object is
	abstract method hasNextNode : () -> Boolean

	abstract method countMeOn : () -> Integer
		