test/invalid/41625_AbstractMethods/AbstractObject.plume

abstract class AbstractObject extends Object is
	abstract method override toString : () -> String